# XmlParser

./: .gitignore  .gitmodules  CMakeLists.txt  sonar-project.properties
xmlParser/: CMakeLists.txt  XmlAttribute.cpp  XmlAttribute.hpp  XmlBuilder.cpp  XmlBuilder.hpp  XmlNode.cpp  XmlNode.hpp  XmlUtils.cpp  XmlUtils.hpp
xmlParser_implementation/: CMakeLists.txt  main.cpp
xmlParser_tests/: CMakeLists.txt
xmlParser_tests/tests/: BlankTest.cpp  CMakeLists.txt  XmlAttributeTest.cpp  XmlBuilderTest.cpp  XmlNodeTest.cpp  XmlUtilsTest.cpp
xmlParser_tests/tests/XmlBuilderTest/: XmlBuilderTest.cpp  XmlBuilderTest.hpp  XmlBuilderTest_Examples.cpp  XmlBuilderTest_SingleChild_Empty.cpp  XmlBuilderTest_SingleNode_Attribute.cpp  XmlBuilderTest_SingleNode_BlankAttribute.cpp  XmlBuilderTest_SingleNode_Empty.cpp  XmlBuilderTest_SingleNode_WhitespaceAttribute.cpp
xmlParser_tests/tests/data/: CMakeLists.txt  example.xml  exampleWhitespace.xml
xmlParser_tests/tests/data/XmlBuilderTest/: CMakeLists.txt
xmlParser_tests/tests/data/XmlBuilderTest/SingleChild/: CMakeLists.txt
xmlParser_tests/tests/data/XmlBuilderTest/SingleChild/Empty/: CMakeLists.txt  ChildCloseWhitespace.xml  CloseNodeWhitespace.xml  CloseWhitespace.xml  RootCloseWhitespace.xml
xmlParser_tests/tests/data/XmlBuilderTest/SingleNode/: CMakeLists.txt
xmlParser_tests/tests/data/XmlBuilderTest/SingleNode/BlankAttribute/: AssignmentWhitespacePost.xml  AssignmentWhitespacePre.xml  AssignmentWhitespacePrePost.xml  CloseWhitespace.xml  CloseWhitespace_AssignmentWhitespacePost.xml  CloseWhitespace_AssignmentWhitespacePre.xml  CloseWhitespace_AssignmentWhitespacePrePost.xml  NoWhitespace.xml
xmlParser_tests/tests/data/XmlBuilderTest/SingleNode/Empty/: CMakeLists.txt
xmlParser_tests/tests/data/XmlBuilderTest/SingleNode/WhitespaceAttribute/: AssignmentWhitespacePost.xml  AssignmentWhitespacePre.xml  AssignmentWhitespacePrePost.xml  CMakeLists.txt  CloseWhitespace.xml  CloseWhitespace_AssignmentWhitespacePost.xml  CloseWhitespace_AssignmentWhitespacePre.xml  CloseWhitespace_AssignmentWhitespacePrePost.xml  NoWhitespace.xml
